<resources>
    <string name="app_name">Assignment2</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_numeracy">Numeracy</string>
    <string name="menu_literature">Literature</string>
    <string name="menu_criticalthinking">Critical Thinking</string>
    <string name="menu_settings">Settings</string>

    <string name="answer">Answer</string>
    <string name="next">Next</string>

    <string name="critcalHelp">Critical Thinking Help: Click one of the radio buttons for each question, if you click none, it will be considered a wrong answer</string>
    <string name="litHelp">Literature Help: Click one of the radio buttons for each question, if you click none, it will be considered a wrong answer</string>
    <string name="numHelp">Numeracy Help: Enter the number you think is the answer is the text box, if you enter none, it will be considered a wrong answer</string>
</resources>