<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_numeracy"
            android:icon="@drawable/ic_math"
            android:title="@string/menu_numeracy" />
        <item
            android:id="@+id/nav_literature"
            android:icon="@drawable/ic_lit"
            android:title="@string/menu_literature" />
        <item
            android:id="@+id/nav_criticalthinking"
            android:icon="@drawable/ic_critical"
            android:title="@string/menu_criticalthinking" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_applications_24"
            android:title="@string/menu_settings" />
    </group>
</menu>