<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizRules">

    <TextView
        android:id="@+id/quizrulesheader"
        android:layout_width="260dp"
        android:layout_height="73dp"
        android:layout_marginTop="44dp"
        android:text="Quiz Rules"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quizrules2"
        android:layout_width="252dp"
        android:layout_height="79dp"
        android:layout_marginTop="60dp"
        android:text="@string/critcalHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizrulesheader" />

    <TextView
        android:id="@+id/quizrules3"
        android:layout_width="252dp"
        android:layout_height="79dp"
        android:layout_marginTop="44dp"
        android:text="@string/litHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizrules2" />

    <TextView
        android:id="@+id/quizrules4"
        android:layout_width="252dp"
        android:layout_height="79dp"
        android:layout_marginTop="48dp"
        android:text="@string/numHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizrules3" />

    <TextView
        android:id="@+id/return1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Return"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>